add headers from title tag

--- a/cleaned/12.html
+++ b/cleaned/12.html
@@ -80,13 +80,14 @@
           </ul>
         </td>
         <td >
-          <h1>Aktuelle Ausstellung</h1>
+          <h1>Ausstellungen</h1>
+          <h2>Aktuelle Ausstellung</h2>
 
           <img src="resources/_wsb_329x421_Dimitar+Georgiev+-+Fotoausstellung++-+Flyer+$28Version+3.0$29+$28Britannic+Bold$29+$282017.05.17$29.jpg">
 
           <p>Dimitar Georgiev, Kursleiter im Bereich Saxofon, Klarinette und Klavier im Kulturhaus, ist viel in der Welt herumgekommen und hatte meistens seine Kamera dabei. Es sind beeindruckende Bilder entstanden, die sich sehen lassen können.</p>
 
-          <h2>Vernissage am Donnerstag, den 1.6.17 ab 19 Uhr</h2>
+          <h3>Vernissage am Donnerstag, den 1.6.17 ab 19 Uhr</h3>
 
           <p>Der Künstler ist anwesend und hat sein Saxofon dabei.</p>
 
@@ -98,9 +99,8 @@
 
           <p>Die Ausstellung ist werktags von 10-20 Uhr geöffnet.</p>
 
-          <h1>Peter Hoppe</h1>
-          <h2>Reiseberichte</h2>
-          <h3>Leporello-Bilder (Kugelschreiber/Aquarell)</h3>
+          <h3>Peter Hoppe: Reiseberichte</h3>
+          <h4>Leporello-Bilder (Kugelschreiber/Aquarell)</h4>
 
           <img src="resources/_wsb_290x335_Flyer-x1-AugenblickeWeb-1.jpg">
 
@@ -108,9 +108,8 @@
 
           <img src="resources/_wsb_183x190_rindfleisch_im_wok+wendland+watercolor+40+x+40+cm+$282$29.jpg">
 
-          <h1>Anke de Vries</h1>
-          <h2>.... nicht vom Brot allein ...</h2>
-          <h2>Aquarellporträts von Geflüchteten</h2>
+          <h3>Anke de Vries: ... nicht vom Brot allein ...</h3>
+          <h4>Aquarellporträts von Geflüchteten</h4>
 
           <img src="resources/_wsb_176x256_Scott+web.jpg">
         </td>
