--- a/cleaned/15.html
+++ b/cleaned/15.html
@@ -182,6 +182,7 @@
         </td>
         <td>
           <h1>Eröffnung BGZ Süderelbe</h1>
+          <h2>am 29. Febr. 2012</h2>
           <img src="resources/_wsb_221x434_Einladungsflyer+BGZ+Er$C3$B6ffnung-3.jpg">
 
           <h2>Links zur Eröffnung</h2>
