--- a/cleaned/17.html
+++ b/cleaned/17.html
@@ -80,6 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Kulturtage Süderelbe 2017</h1>
           <img src="resources/_wsb_432x142_Kulturtage+Kopie.jpg">
           <p>Seit sieben Jahren führt unser Kulturhaus Süderelbe als Koordinator und Organisator die vielen kulturellen Einzelveranstaltungen im Süerelberaum im Rahmen der Kulturtage zu einem beeindruckenden Ganzen zusammen.</p>
 
