--- a/cleaned/18.html
+++ b/cleaned/18.html
@@ -181,6 +181,8 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Branimir Georgiev - Bilder aus Hamburg Süd</h1>
+          <h2>Vernissage am 5. Sept.</h2>
           <img src="resources/_wsb_496x356_branimir+ausstellung4reduziert.jpg">
           <p>Branimir Georgiev: <a href="http://www.brageo.de">www.brageo.de</a></p>
 
