--- a/cleaned/23.html
+++ b/cleaned/23.html
@@ -181,52 +181,22 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3 align="center">
-            Vernissage und Lesung
-          </h3>
-          <h3 align="center">
-            am 21. Oktober um 19.00 Uhr
-          </h3>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <h3>
-                    <img src="resources/_wsb_463x656_Kulturpinsel.jpg">
-                  </h3>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p align="center"></p>
-          <p align="center">
-             
-          </p>
+          <h1>Vernissage und Lesung: "Geschichten aus fünf Jahrhunderten"</h1>
+          <h2>am 21. Oktober um 19.00 Uhr</h2>
+          <img src="resources/_wsb_463x656_Kulturpinsel.jpg">
           <p>
             Zwei Malgruppen des Kulturhauses, die Aquarellgruppe "Kulturpinsel"
-          </p>
-          <p>
             (Kurstermin mittwochs 18-21 Uhr, Leitung: Elke Nack-Karstens) und
-          </p>
-          <p>
             die Ölmalgruppe (Kurstermin montags 10-13 Uhr, Leitung: Margrit Werner)
-          </p>
-          <p>
             entwarfen Bilder für das Jubiläumsbuch "500 Jahre Neugraben", die in
-          </p>
-          <p>
             der Ausstellung zu sehen sind.
           </p>
           <p>
             Uwe Michelau wird Auszüge aus dem Jubiläumsbuch
-          </p>
-          <p>
             lesen. Das Buch ist im Kulturhaus für € 14,90 erhältlich
           </p>
           <p>
             Die Ausstellung läuft vom 13. Okt. bis 01. Nov. während der Kulturhaus-
-          </p>
-          <p>
             Öffnungszeiten, Mo-Fr, 10-20 Uhr.
           </p>
         </td>
