--- a/cleaned/5.html
+++ b/cleaned/5.html
@@ -91,8 +91,9 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h1>37 Jahre Kulturhaus Süderelbe e.V.</h1>
-          <h2>1980 - 2017</h2>
+          <h1>Kursangebot</h1>
+          <h2>37 Jahre Kulturhaus Süderelbe e.V.</h1>
+          <h3>1980 - 2017</h2>
           <img src="resources/_wsb_139x188_Web+15_1.jpg">
           <img src="resources/_wsb_139x196_KHS1+099-A2.jpg">
           <img src="resources/_wsb_137x194_Web+15_2.jpg">
