--- a/cleaned/7.html
+++ b/cleaned/7.html
@@ -181,9 +181,10 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h1>
+          <h1>Mosaikwand</h1>
+          <h2>
             "Mit Künstlern arbeiten, von Künstlern lernen"
-          </h1>
+          </h2>
           <p>
             <img src="resources/_wsb_177x116_spiegel-Drache_einl128.jpg"><img src="resources/_wsb_170x116_spiegel-Drache_einl126.jpg"><img src="resources/_wsb_167x116_spiegel-Drache_einl1.jpg">
           </p>
