--- a/cleaned/6.html
+++ b/cleaned/6.html
@@ -80,6 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Links</h1>
           <ul>
             <li>
               <a href="http://www.stadtkultur-hh.de">Stadtkultur Hamburg e.V</a>
