--- a/cleaned/9.html
+++ b/cleaned/9.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Kulturhaus Suederelbe e.V.">
     <meta name="keywords" content="Stadtteilkultur Hamburg, Kultur in Hamburg, Soziokultur Hamburg, BGZ Süderelbe, Holzschnitzen, Aquarell-Kurse, Acryl-Kurse, Tai Chi, Yoga, Energydance, Afrikanisches Trommeln, Gitarrenkurse, Klavier-Unterricht, Töpfern, Aktzeichnen, Kunstkurse, Bildungspaket, Energydance, Yoga, Malerei, Geigen-Unterricht, Kursprogramm, Stadtteilkulturzentren, Soziokultur-Zentren, Bildhauer, Kulturhaus Süderelbe im BGZ Süderelbe, Hamburger Bildungspaket, Kindergeburtstage">
     <title>
-      "Unsere Welt braucht eineTherapie", Gesprächsabend am 22. Juni - Kulturhaus Süderelbe e.V.
+      "Unsere Welt braucht eine Therapie", Gesprächsabend am 22. Juni - Kulturhaus Süderelbe e.V.
     </title>
     <link rel="stylesheet" type="text/css" media="all" href="main.css">
     <link rel="stylesheet" type="text/css" media="all" href="colorschemes/colorscheme1/colorscheme.css">
@@ -80,22 +80,31 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p align="left"></p><img src="resources/_wsb_436x643_Titelbild+die-besten-jahre-liegen-noch-vor-uns.jpg">
-          <h3>
+          <h1>
             „Unsere verheerte Welt braucht eine Therapie“
-          </h3>
-          <h3>
+          </h1>
+          <img src="resources/_wsb_436x643_Titelbild+die-besten-jahre-liegen-noch-vor-uns.jpg">
+
+          <h2>
             Gesprächsabend am 22. Juni 2017 um 19 Uhr
-          </h3><b>Kulturhaus Süderelbe</b> Stadtteilsaal BGZ Süderelbe Am Johannisland 2 21147 Hamburg Tel. 040-7967222 info@kulturhaus-suederelbe.de Eintritt frei, Spenden sind willkommen Der Hamburger Psychotherapeut Dr. Thomas Kahl arbeitet mit Kindern, Jugendlichen,
-          <p align="left">
-            Erwachsenen, Familien, um mit ihnen Lösungen für ihre Probleme zu finden. Um allen Staaten
+          </h2>
+
+          <p>
+          <b>Kulturhaus Süderelbe</b><br>
+          Stadtteilsaal BGZ Süderelbe<br>
+          Am Johannisland 2<br>
+          21147 Hamburg<br>
+          Tel.: 040-7967222<br>
+          E-Mail: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a><br>
           </p>
-          <p align="left">
-            zu helfen, ihre Schwierigkeiten friedlich zu bewältigen, wurden 1945 die Vereinten
-          </p>
-          <p align="left">
-            Nationen (UNO) gegründet. Sowohl in Familien als auch bei Staaten kommt es immer wieder zu Konflikten, Missverständnissen, Rivalitäten, Unzufriedenheit und Auseinandersetzungen. Gegenseitige Schädigungen, vor allem in kriegerischen Formen, sind zu vermeiden. Denn nur unter friedlichen Bedingungen können alle Menschen ihr Leben genießen, kultivieren und sich gesund entwickeln. Bildung und gute Leistungen erfordern, dass man sich ungestört in Ruhe und ohne Zeitdruck Menschen, Sachen und Aufgaben voller Liebe und Hingabe widmen kann. Gute Regierungsarbeit gelingt nur unter entspannten, friedlichen Bedingungen. Jedoch ist die Menschheitsgeschichte von kriegerischen Auseinandersetzungen geprägt. Nach dem Ende des Kalten Krieges ergab sich 1990 im Zuge der Globalisierung ein weltweiter Konkurrenzkampf ums Überleben zwischen allen Staaten und ihren Wirtschaftsunternehmen. Einige Beobachter meinen, dass wir uns seitdem im Dritten Weltkrieg befinden. Es muss verhindert werden, dass darin das gesamte Leben auf der Erde vernichtet wird. Zweckmäßige Heilungsmaßnahmen (Reformen) können zu Lösungen führen, die dafür sorgen, dass es allen Menschen zunehmend besser geht. Dr. Thomas Kahl fand in Roman Herzogs „Ruck-Rede“ (1997) überzeugende Anregungen zu konstruktivem Vorgehen. Daraus ergibt sich ein Therapieprogramm. Im Vertrauen auf die Macht der Vernunft hatte Herzog seine Rede beendet mit den Worten: „Die besten Jahre liegen noch vor uns.“ Ein interessanter Gesprächsabend erwartet Sie!
-          </p>
+
+          <p>Eintritt frei, Spenden sind willkommen</p>
+
+          <p>Der Hamburger Psychotherapeut Dr. Thomas Kahl arbeitet mit Kindern, Jugendlichen, Erwachsenen, Familien, um mit ihnen Lösungen für ihre Probleme zu finden. Um allen Staaten zu helfen, ihre Schwierigkeiten friedlich zu bewältigen, wurden 1945 die Vereinten Nationen (UNO) gegründet. Sowohl in Familien als auch bei Staaten kommt es immer wieder zu Konflikten, Missverständnissen, Rivalitäten, Unzufriedenheit und Auseinandersetzungen. Gegenseitige Schädigungen, vor allem in kriegerischen Formen, sind zu vermeiden. Denn nur unter friedlichen Bedingungen können alle Menschen ihr Leben genießen, kultivieren und sich gesund entwickeln. Bildung und gute Leistungen erfordern, dass man sich ungestört in Ruhe und ohne Zeitdruck Menschen, Sachen und Aufgaben voller Liebe und Hingabe widmen kann. Gute Regierungsarbeit gelingt nur unter entspannten, friedlichen Bedingungen.</p>
+          <p>Jedoch ist die Menschheitsgeschichte von kriegerischen Auseinandersetzungen geprägt. Nach dem Ende des Kalten Krieges ergab sich 1990 im Zuge der Globalisierung ein weltweiter Konkurrenzkampf ums Überleben zwischen allen Staaten und ihren Wirtschaftsunternehmen. Einige Beobachter meinen, dass wir uns seitdem im Dritten Weltkrieg befinden. Es muss verhindert werden, dass darin das gesamte Leben auf der Erde vernichtet wird.</p>
+          <p>Zweckmäßige Heilungsmaßnahmen (Reformen) können zu Lösungen führen, die dafür sorgen, dass es allen Menschen zunehmend besser geht. Dr. Thomas Kahl fand in Roman Herzogs „Ruck-Rede“ (1997) überzeugende Anregungen zu konstruktivem Vorgehen. Daraus ergibt sich ein Therapieprogramm. Im Vertrauen auf die Macht der Vernunft hatte Herzog seine Rede beendet mit den Worten: „Die besten Jahre liegen noch vor uns.“</p>
+
+          <p>Ein interessanter Gesprächsabend erwartet Sie!</p>
         </td>
       </tr>
     </table>
