clean yet more files

--- a/cleaned/24.html
+++ b/cleaned/24.html
@@ -181,7 +181,14 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_513x731_Mardon-1.jpg"> Folk-Concert mit den international bekannten Neugrabener Musikern Jan Mardon und Dylan Vaughn. Das Duo singt und spielt Folk von irisch-amerikanischen Traditionals bis hin zu mitreißenden Eigenkompositionen. Die beiden präsentieren zudem ihre neue CD. <a href="http://www.mardon.de">www.mardon.de</a>
+          <h1>Blues Harp Workshop mit Steve Baker</h1>
+          <h2>am 19. Okt. 2014</h2>
+
+          <img src="resources/_wsb_513x731_Mardon-1.jpg">
+
+          <p>Folk-Concert mit den international bekannten Neugrabener Musikern Jan Mardon und Dylan Vaughn. Das Duo singt und spielt Folk von irisch-amerikanischen Traditionals bis hin zu mitreißenden Eigenkompositionen. Die beiden präsentieren zudem ihre neue CD.</p>
+
+          <p><a href="http://www.mardon.de">www.mardon.de</a></p>
         </td>
       </tr>
     </table>
