--- a/cleaned/25.html
+++ b/cleaned/25.html
@@ -181,44 +181,27 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            <img src="resources/_wsb_485x684_Hase_Ben.jpg">
-          </h3>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <b>Weihnachtsmärchen von und mit Ben Soyka und Michaela Lisa Pehlke</b> Den alten Wettstreit zwischen Hase und Igel kennt ja nun jedes Kind, und er ist schon so lange her, dass über die Sache längst Gras gewachsen ist. Die Nachfahren der damals am Wettlauf in Buxtehude Beteiligten sind in den vergangenen Jahren nicht mehr um die Wette gerannt, sondern gemeinsam durch die Weltgeschichte gereist. Doch nun das: Es ist kurz vor Weihnachten und der Hase sitzt alleine zuhause in seiner Bude. Wo ist der Igel? Er wollte doch eigentlich nur mal für ein Wochenende seine Verwandten besuchen. Langsam macht der Hase sich echt Sorgen - aber lange bleibt er nicht alleine...
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <h1>Hase - ohne Igel?!</h1>
+          <h2>Weihnachtsmärchen am 13. Dez. 2016</h2>
+          <img src="resources/_wsb_485x684_Hase_Ben.jpg">
+
+          <h3>Weihnachtsmärchen von und mit Ben Soyka und Michaela Lisa Pehlke</h3>
+          <p>Den alten Wettstreit zwischen Hase und Igel kennt ja nun jedes Kind, und er ist schon so lange her, dass über die Sache längst Gras gewachsen ist. Die Nachfahren der damals am Wettlauf in Buxtehude Beteiligten sind in den vergangenen Jahren nicht mehr um die Wette gerannt, sondern gemeinsam durch die Weltgeschichte gereist.</p>
+          <p>Doch nun das: Es ist kurz vor Weihnachten und der Hase sitzt alleine zuhause in seiner Bude. Wo ist der Igel? Er wollte doch eigentlich nur mal für ein Wochenende seine Verwandten besuchen. Langsam macht der Hase sich echt Sorgen - aber lange bleibt er nicht alleine...</p>
+
           <p>
-            <b>Kulturhaus Süderelbe</b>
+          <b>Kulturhaus Süderelbe</b><br>
+          Am Johannisland 2<br>
+          Stadtteilsaal BGZ Süderelbe, Eingang CU-Arena<br>
+          21147 Hamburg<br>
+          (Direkt am S-Bahnhof Neugraben)
           </p>
           <p>
-            Am Johannisland 2
-          </p>
-          <p>
-            Stadtteilsaal BGZ Süderelbe, Eingang CU-Arena
-          </p>
-          <p>
-            21147 Hamburg (Direkt am S-Bahnhof Neugraben)
-          </p>
-          <p>
-            Tel.: 796 72 22
-          </p>
-          <p>
-            Mail: info@kulturhaus-suederelbe.de
-          </p>
-          <p>
-            Dauer: ca. 45 Min.
-          </p>
-          <p>
-            Eintritt: € 4,50 pro Näschen und Nase
-          </p>
-          <p>
-            Für Gruppen wird eine Voranmeldung erbeten
+          Tel.: 796 72 22<br>
+          E-Mail: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a><br>
+          Dauer: ca. 45 Min.<br>
+          Eintritt: 4,50 € pro Näschen und Nase<br>
+          Für Gruppen wird eine Voranmeldung erbeten
           </p>
         </td>
       </tr>
