--- a/cleaned/26.html
+++ b/cleaned/26.html
@@ -80,72 +80,37 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            Puppentheater Kollin Kläff
-          </h3>
-          <p>
-            <b>Handpuppentheater mit und von Maya Raue</b>
-          </p>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <p align="left">
-                    <img src="resources/_wsb_218x169_Kollin+Kl$C3$A4ff+f$C3$BCr+Webseite+und+Flyer.jpg">
-                  </p>
-                  <p align="left"></p>
-                </td>
-                <td>
-                  <img src="resources/_wsb_221x170_Maya+Raue_Puppenspielerin_web.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  In den von Maya Raue selbstgeschriebenen Puppentheater-Geschichten geht es um Freundschaft, Mut und Hilfsbereischaft. Kollin Kläff, ihre Hauptfigur, erlebt in jeder Geschichte ein 40 minütiges Abenteuer. Schon die Kleinsten finden sich zurecht und werden zu Verbündeten. Mit Herz und Humor bezieht Maya Raue die Kinder mit in die Geschichte ein. Lebendiges Puppentheater zum Anfassen, denn am Schluss dürfen die Kinder noch ausgiebig mit einer der Figuren quatschen und Faxen machen. Karten können über das Puppentheater Kollin Kläff per Mail oder telefonisch reserviert werden: 040-18204876, <a href="mailto:puppentheater@kollin-klaeff.de">puppentheater@kollin-klaeff.de</a>
-                </td>
-              </tr>
-            </tbody>
-          </table>Für Menschen von 2 bis 99 Jahren <b>Eintritt: 6 €</b> (inkl. eine Süßigkeit oder ein Getränk)
-          <p>
-            Dauer ca. 40 Min.
-          </p>
-          <p>
-            <b>Jeweils um 11 und um 15 Uhr</b>
-          </p>
-          <p>
-            Voranmeldung für Gruppen erforderlich
-          </p>
+          <h1>
+            Puppentheater Kollin Kläff - Termine ab Oktober 2017
+          </h1>
+          <h2>Handpuppentheater mit und von Maya Raue</h2>
+          <img src="resources/_wsb_218x169_Kollin+Kl$C3$A4ff+f$C3$BCr+Webseite+und+Flyer.jpg">
+          <img src="resources/_wsb_221x170_Maya+Raue_Puppenspielerin_web.jpg">
+
+          <p>In den von Maya Raue selbstgeschriebenen Puppentheater-Geschichten geht es um Freundschaft, Mut und Hilfsbereischaft. Kollin Kläff, ihre Hauptfigur, erlebt in jeder Geschichte ein 40 minütiges Abenteuer. Schon die Kleinsten finden sich zurecht und werden zu Verbündeten. Mit Herz und Humor bezieht Maya Raue die Kinder mit in die Geschichte ein.</p>
+          <p>Lebendiges Puppentheater zum Anfassen, denn am Schluss dürfen die Kinder noch ausgiebig mit einer der Figuren quatschen und Faxen machen. Karten können über das Puppentheater Kollin Kläff per Mail oder telefonisch reserviert werden:<br>
+          040-18204876, <a href="mailto:puppentheater@kollin-klaeff.de">puppentheater@kollin-klaeff.de</a></p>
+
+          <p>Für Menschen von 2 bis 99 Jahren.<br>
+          <b>Eintritt: 6 €</b> (inkl. eine Süßigkeit oder ein Getränk)<br>
+          Dauer ca. 40 Min.<br>
+          <b>Jeweils um 11 und um 15 Uhr</b><br>
+          Voranmeldung für Gruppen erforderlich</p>
+
           <p>
             Folgende Termine sind geplant, nähere Informationen folgen:
           </p>
-          <p>
-            <u>Am Sonntag, 15. Oktober 17 um 11 Uhr und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag, 5. November 17 um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag, 3. Dezember 17 um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag, 7. Januar 18 um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag, 4. Februar 18 um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag, 4. März 18 um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <u>Am Sonntag 8. April um 11 und um 15 Uhr</u>
-          </p>
-          <p>
-            <a href="http://www.xn--kollin-klff-t8a.de">www.kollin-kläff.de</a>
-          </p>
+          <ul>
+            <li>Sonntag, 15. Oktober 17 um 11 Uhr und um 15 Uhr</li>
+            <li>Sonntag, 5. November 17 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 3. Dezember 17 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 7. Januar 18 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 4. Februar 18 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 4. März 18 um 11 und um 15 Uhr</li>
+            <li>Sonntag 8. April um 11 und um 15 Uhr</li>
+          </ul>
+
+          <p><a href="http://www.xn--kollin-klff-t8a.de">www.kollin-kläff.de</a></p>
           <p>
             <a href="https://www.youtube.com/watch?v=sUu6ZtIaJ5Y">Kollin Kläff auf YouTube</a>
           </p>
