continue fixing files

--- a/cleaned/26.html
+++ b/cleaned/26.html
@@ -101,13 +101,13 @@
             Folgende Termine sind geplant, nähere Informationen folgen:
           </p>
           <ul>
-            <li>Sonntag, 15. Oktober 17 um 11 Uhr und um 15 Uhr</li>
-            <li>Sonntag, 5. November 17 um 11 und um 15 Uhr</li>
-            <li>Sonntag, 3. Dezember 17 um 11 und um 15 Uhr</li>
-            <li>Sonntag, 7. Januar 18 um 11 und um 15 Uhr</li>
-            <li>Sonntag, 4. Februar 18 um 11 und um 15 Uhr</li>
-            <li>Sonntag, 4. März 18 um 11 und um 15 Uhr</li>
-            <li>Sonntag 8. April um 11 und um 15 Uhr</li>
+            <li>Sonntag, 15. Oktober 2017 um 11 Uhr und um 15 Uhr</li>
+            <li>Sonntag, 5. November 2017 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 3. Dezember 2017 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 7. Januar 2018 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 4. Februar 2018 um 11 und um 15 Uhr</li>
+            <li>Sonntag, 4. März 2018 um 11 und um 15 Uhr</li>
+            <li>Sonntag 8. April 2018 um 11 und um 15 Uhr</li>
           </ul>
 
           <p><a href="http://www.xn--kollin-klff-t8a.de">www.kollin-kläff.de</a></p>
