--- a/cleaned/27.html
+++ b/cleaned/27.html
@@ -181,27 +181,25 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Christin Neddens' Oceanside Quartett</h1>
           <img src="resources/_wsb_532x375_Plakat_a4.jpg">
-          <h3>
-            CHRISTIN NEDDENS' OCEANSIDE QUARTETT
-          </h3>
-          <h3>
-            (Berlin/Hamburg/Köln)
-          </h3><u>Am 28. Oktober 16 um 19.30 Uhr</u>
+          <h2>(Berlin/Hamburg/Köln)</h2>
+          </h2>28. Oktober 2016 um 19.30 Uhr</h2>
           <p>
-            Hochkarätige MusikerInnen Jonas Schoen-Philbert (sax), Martin Terens (p), Hendrika Entzian (b) und Christin Neddens (dr) aus Berlin, Hamburg und Köln, spielen Eigenkompositionen im Inspirationsgewand großstädtischer Gegenden und Metropolen von LA bis Hamburg – in der Jazz-Tradition verhaftet und dennoch modern, energetisch und eigen erklingend. <a href="http://www.christinneddens.de"><i>www.christinneddens.de</i></a>
+            Hochkarätige MusikerInnen Jonas Schoen-Philbert (sax), Martin Terens (p), Hendrika Entzian (b) und Christin Neddens (dr) aus Berlin, Hamburg und Köln, spielen Eigenkompositionen im Inspirationsgewand großstädtischer Gegenden und Metropolen von LA bis Hamburg – in der Jazz-Tradition verhaftet und dennoch modern, energetisch und eigen erklingend.</p>
+            <p><a href="http://www.christinneddens.de">www.christinneddens.de</a></p>
+          <p>
+          <b>Kulturhaus Süderelbe</b><br>
+          Schulaula BGZ Süderelbe<br>
+          Am Johannisland 4<br>
+          21147 Hamburg<br>
+          Tel.: 040-7967222<br>
           </p>
           <p>
-            <b>Kulturhaus Süderelbe</b>
+            <b>Eintritt: 14,- €</b>
           </p>
           <p>
-            Schulaula BGZ Süderelbe Am Johannisland 4 21147 Hamburg Tel. 040-7967222 info@kulturhaus-suederelbe.de
-          </p>
-          <p>
-            <b>Eintritt: € 14,-</b>
-          </p>
-          <p>
-            Im Vorverkauf (ab 27. Sept.) sind Karten im Kulturhaus Süderelbe und im FitHus (BGZ) und an der Theaterkasse EKZ Neugraben erhältlich. Abendkasse: € 16,-
+            Im Vorverkauf (ab 27. Sept.) sind Karten im Kulturhaus Süderelbe und im FitHus (BGZ) und an der Theaterkasse EKZ Neugraben erhältlich. Abendkasse: 16,- €
           </p>
         </td>
       </tr>
