--- a/cleaned/28.html
+++ b/cleaned/28.html
@@ -181,50 +181,28 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Johannes Kirchberg: HEUTE ZWISCHEN GESTERN UND MORGEN</h1>
+          <h2>am 5. Nov. 2016</h2>
           <img src="resources/_wsb_519x734_Plakat_2016rdz.jpg">
-          <table>
-            <tbody>
-              <tr>
-                <td>
                   <p>
                     Johannes Kirchberg begibt sich mit Kurt Tucholsky auf eine Entdeckungsreise hin zum Beginn des letzten Jahrhunderts. Und er präsentiert die immer noch aktuellen Themen in dem beeindruckenden Chansonabend HEUTE ZWISCHEN GESTERN UND MORGEN.
                   </p>
                   <p>
                     Kirchberg singt Tucholsky, er spielt und rezitiert ihn. Mit charmanter Leichtigkeit entführt er in Tucholskys Sicht auf die Welt, erzählt von seinen Reisen, seinen Liebschaften, der Politik und präsentiert Tucholskys scharfzüngigen Humor mit Liedern komponiert von Eisler, Bienert und vor allem Kirchberg selbst.
                   </p>
-                </td>
-              </tr>
-            </tbody>
-          </table><a href="http://www.johannes-kirchberg.de/wie-frueher-nur-besser/">www.johannes-kirchberg.de</a>
-          <table>
-            <tbody>
-              <tr>
-                <td valign="top">
+          <p><a href="http://www.johannes-kirchberg.de/wie-frueher-nur-besser/">www.johannes-kirchberg.de</a></p>
                   <p>
-                    <b>Kulturhaus Süderelbe e.V.</b>
+                    <b>Kulturhaus Süderelbe e.V.</b><br>
+                    Am Johannisland 2<br>
+                    21147 Hamburg<br>
+                    Tel.: 040-7967222<br>
                   </p>
-                  <p>
-                    Am Johannisland 2
-                  </p>
-                  <p>
-                    21147 Hamburg
-                  </p>
-                  <p>
-                    Tel. 040-7967222
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
           <p>
-            <b>Eintritt: € 10,-</b>
-          </p>
-          <p>
-            Im Vorverkauf sind Karten ab 19. September im Kulturhaus Süderelbe und im FitHus (BGZ), an der Theaterkasse Kähler* (EKZ Neugraben) erhältlich.
-          </p>
-          <p>
-            (*plus 10% Vvk-Gebühr).
-          </p>Abendkasse: € 12,- <img src="resources/_wsb_192x64_Kulturtage2.jpg">
+            <b>Eintritt: 10,- €</b><br>
+            Im Vorverkauf sind Karten ab 19. September im Kulturhaus Süderelbe und im FitHus (BGZ), an der Theaterkasse Kähler<sup>*</sup> (EKZ Neugraben) erhältlich.<br>
+            Abendkasse: 12,- €</p>
+          <p><sup>*</sup>plus 10% VVK-Gebühr</p>
+          <img src="resources/_wsb_192x64_Kulturtage2.jpg">
         </td>
       </tr>
     </table>
