--- a/cleaned/30.html
+++ b/cleaned/30.html
@@ -182,36 +182,43 @@
         </td>
         <td colspan="1" rowspan="1">
           <h3>
-            Ein bunter Strauß voll Leben
-          </h3><img src="resources/_wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg">
-          <p>
-            Regie: Lars Ceglecki
-          </p>
-          <p>
-            Es spielen: Melanie Weirather, Maik Möller, Thomas Nestler und Ulrike Kohl
-          </p>Idee / Umsetzung / Geschichte / Text u.a.: Melanie Weirather und Maik Möller Musik: Thomas Nestler und Ulrike Kohl Gesang: Ulrike Kohl Am Saxophon: Thomas Nestler Am Löffel: Trudi Trudering Ein Stück über die Liebe und das Leben mit all seinen Facetten. Trudi ist eine junge Frau aus Byern, die sich auf dem Weg nach Hamburg macht, um dort ihr Glück zu finden. Dort trifft sie auf viele Menschen, die ihren Weg zum Glück beeinflussen.Wie z.B. Ronny aus Sachsen, den Casanova Hans Werner Tulpe, den Saxophon spielenden Barkeeper und Hütchenspieler Hannes Hamburg sowie die singende Nachtigall Kiki LaRose und den Psychologen Lübbke. Ob das Leben ihr in Hamburg schöne, strahlende und überraschende oder auch traurige Momente verschaffen wird, erzählen die "Walking Actors" in einer heiteren aber auch zum Nachdenken anregenden Geschichte. Hier ist für jeden etwas dabei: Ein bunter Strauß voll Theater, Musik (Blues, Jazz, Swing und Hamburger Lieder), Poesie und Comedy.
-          <h3>
-            Am 8. Nov. 14 um 19 Uhr
+            Walking Actors: "Ein bunter Strauß voll Leben"
           </h3>
-          <p>
-            <b>Kulturhaus Süderelbe e.V.</b>
-          </p>
-          <p>
-            Am Johannisland 4
-          </p>
-          <p>
-            Schulaula BGZ
-          </p>
-          <p>
-            21147 Hamburg
-          </p>
-          <p>
-            Tel. 040-7967222
+          <h2>Am 8. Nov. 2014 um 19 Uhr</h2>
+          <img src="resources/_wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg">
+          <dl>
+          <dd>Regie</dd>
+            <dt>Lars Ceglecki</dt>
+          <dd>Es spielen</dd>
+            <dt>Melanie Weirather</dt>
+            <dt>Maik Möller</dt>
+            <dt>Thomas Nestler</dt>
+            <dt>Ulrike Kohl</dt>
+          <dd>Idee / Umsetzung / Geschichte / Text u.a.</dd>
+            <dt>Melanie Weirather und Maik Möller</dt>
+          <dd>Musik</dd>
+            <dt>Thomas Nestler und Ulrike Kohl</dt>
+          <dd>Gesang</dd>
+            <dt>Ulrike Kohl</dt>
+          <dd>Am Saxophon</dd>
+            <dt>Thomas Nestler</dt>
+          <dd>Am Löffel</dd>
+            <dt>Trudi Trudering</dt>
+          <dl>
+
+          <p>Ein Stück über die Liebe und das Leben mit all seinen Facetten. Trudi ist eine junge Frau aus Byern, die sich auf dem Weg nach Hamburg macht, um dort ihr Glück zu finden. Dort trifft sie auf viele Menschen, die ihren Weg zum Glück beeinflussen.Wie z.B. Ronny aus Sachsen, den Casanova Hans Werner Tulpe, den Saxophon spielenden Barkeeper und Hütchenspieler Hannes Hamburg sowie die singende Nachtigall Kiki LaRose und den Psychologen Lübbke.</p>
+          <p>Ob das Leben ihr in Hamburg schöne, strahlende und überraschende oder auch traurige Momente verschaffen wird, erzählen die "Walking Actors" in einer heiteren aber auch zum Nachdenken anregenden Geschichte.</p>
+
+          <p>Hier ist für jeden etwas dabei: Ein bunter Strauß voll Theater, Musik (Blues, Jazz, Swing und Hamburger Lieder), Poesie und Comedy.</p>
+
+          <p><b>Kulturhaus Süderelbe e.V.</b><br>
+            Am Johannisland 4<br>
+            Schulaula BGZ<br>
+            21147 Hamburg<br>
+            Tel.: 040-7967222<br>
           </p>
           <p>
             <b>Karten</b> für 10 € im Vvk: Büro Kulturhaus, FitHus und an der Theaterkasse im
-          </p>
-          <p>
             SEZ Neugraben, Ak: 12 €
           </p>
         </td>
