--- a/cleaned/31.html
+++ b/cleaned/31.html
@@ -181,12 +181,10 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p align="center">
-            <img src="resources/_wsb_490x695_Mittsommernachtstango_web15.jpg">
-          </p>
-          <p>
-            Zur Filmhandlung:
-          </p>
+        <h1>Mittsommernachtstango - Musik u. Dokumentarfilm</h1>
+        <h2>02. Nov. 2015</h2>
+        <img src="resources/_wsb_490x695_Mittsommernachtstango_web15.jpg">
+        <h3>Zur Filmhandlung</h3>
           <p>
             Dokumentarischer Roadmovie über drei Argentinische Tango-Musiker, die quer durch Finnland reisen, auf der Suche nach dem Ursprung des Tango.
           </p>
@@ -200,27 +198,20 @@
             Absolut sehenwertes kleines Meisterstück.
           </p>
           <p>
+            (Mit deutschen Untertiteln)
+          </p>
+          <p>
             Quelle: www.kino.de, 06.10.15
           </p>
           <p>
-            (Mit deutschem Untertitel)
-          </p>
-          <p>
-            <b>Kulturhaus Süderelbe e.V.</b>
-          </p>
-          <p>
-            Am Johannisland 2
-          </p>
-          <p>
-            21147 Hamburg
-          </p>
-          <p>
-            Tel. 040-7967222
+            <b>Kulturhaus Süderelbe e.V.</b><br>
+            Am Johannisland 2<br>
+            21147 Hamburg<br>
+            Tel.: 040-7967222<br>
           </p>
           <p>
             <b>Eintritt frei</b>, gerne Spende
           </p>
-          <h3></h3>
         </td>
       </tr>
     </table>
