--- a/cleaned/32.html
+++ b/cleaned/32.html
@@ -181,55 +181,42 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
+          <h1>
             Abi Wallenstein & Bluesculture featuring Steve Baker & Martin Röttger
-          </h3>
-          <p>
+          </h1>
+          <p
             <img src="resources/_wsb_549x389_bc_photo4_m_pollert_web.jpg">
           </p>
-          <h1>
+          <h2>
             Am 22. Januar 2016 um 20.00 Uhr
-          </h1>
-          <h1>
+          </h2>
+          <h3>
             Rocking Roots'n'Rythm mit
-          </h1>
-          <p>
-            Abi Wallenstein: Guitar, Vocals
-          </p>
-          <p>
-            Steve Baker: Harmonica, Backing Vocals
-          </p>
-          <p>
-            Martin Röttger: Cajon, Percussion
-          </p>
+          </h3>
+          <dl>
+          <dt>Abi Wallenstein</dt>
+          <dd>Guitar, Vocals</dd>
+          <dt>Steve Baker</dt>
+          <dd>Harmonica, Backing Vocals</dd>
+          <dt>Martin Röttger</dt>
+          <dd>Cajon, Percussion</dd>
           <p>
             Die geniale Kombination der Hamburger Blueslegende Abi Wallenstein mit Mundharmonica-Maestro Steve Baker und Cajon-Koryphäe Martin Röttger lässt immer häufiger von sich reden. Das Trio nennt seine Musik "Rocking Roots'n'Rhythm" und bewegt sich in der Crossover-Zone zwischen archaischem Blues, Funk und Rock'n Roll.
           </p>
           <p>
-            <i>"Was die Faszination von "BluesCulture" ausmacht, ist diese magische, ungekünstelte Authentizität, die das Trio mit seiner Musik entfacht. Statt steriler Perfektion setzen die drei auf pure, vertonte Emotion, verbunden mit einer auf schier blindem gegenseitigen Verständnis basierenden musikalischen Interaktion."</i>
+            <quote>"Was die Faszination von "BluesCulture" ausmacht, ist diese magische, ungekünstelte Authentizität, die das Trio mit seiner Musik entfacht. Statt steriler Perfektion setzen die drei auf pure, vertonte Emotion, verbunden mit einer auf schier blindem gegenseitigen Verständnis basierenden musikalischen Interaktion."</quote>
+            <Weser Kurier, Christian Pfeiff
           </p>
           <p>
-            <i>Weser Kurier, Christian Pfeiff</i>
+            <b>Kulturhaus Süderelbe</b><br>
+            Am Johannisland 2-4<br>
+            21147 Hamburg<br>
+            Tel.: 040 7967222<br>
+            E-Mail: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a>
           </p>
           <p>
-            <b>Kulturhaus Süderelbe</b>
-          </p>
-          <p>
-            Am Johannisland 2-4
-          </p>
-          <p>
-            21147 Hamburg
-          </p>
-          <p>
-            Tel.: 7967222
-          </p>Mail: info@kulturhaus-suederelbe.de
-          <p>
-            Eintritt Vvk: € 13 (inkl. Gebühr), Ak: € 16
-          </p>
-          <p>
-            Karten sind im Kulturhaus und im FitHus (BGZ Süderelbe) sowie
-          </p>
-          <p>
+            Eintritt VVK: 13 € (inkl. Gebühr), AK: 16 €<br>
+            Karten sind im Kulturhaus und im FitHus (BGZ Süderelbe) sowie<br>
             an der Theaterkasse EKZ Süderelbe (Neugraben) erhältlich
           </p>
         </td>
