--- a/cleaned/33.html
+++ b/cleaned/33.html
@@ -181,27 +181,30 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            DIE DA!
-          </h3>
-          <h3>
+          <h1>Theater UniVerbal: DIE DA!</h1>
+          <h2>
             Am 31. Okt. 2015 um 19.30 Uhr
-          </h3><img src="resources/_wsb_514x727_Die+Da_redz.jpg">
+          </h2>
+          <img src="resources/_wsb_514x727_Die+Da_redz.jpg">
           <p>
             "Die da" ist eine Obdachlose, die dem Publikum mit oft unfreiwilligem Humor
-          </p>
-          <p>
             aus ihrem Leben erzählt. Sie erzählt von schönen und hässlichen Momenten,
-          </p>
-          <p>
             von Träumen und Verlusten. Und warum sie so ist, wie sie ist.
-          </p><b>Kulturhaus Süderelbe e.V.</b> Am Johannisland 2 21147 Hamburg Tel. 7967222 <b>Eintritt</b> <b>frei,</b> die Theatergruppe freut sich über eine Hutspende
-          <p>
-            Dargestellt von Antje Friedrichs
           </p>
-          <p>
-            Regie: Maja Meiser
+
+          <p><b>Kulturhaus Süderelbe e.V.</b><br>
+          Am Johannisland 2<br>
+          21147 Hamburg<br>
+          Tel.: 040 7967222<br>
           </p>
+          <p><b>Eintritt frei</b>, die Theatergruppe freut sich über eine Hutspende</p>
+
+          <dl>
+          <dt>Dargestellt von</dt>
+           <dd>Antje Friedrichs<dd>
+          <dt>Regie</dt>
+            <dd>Maja Meiser</dd>
+          </dd>
         </td>
       </tr>
     </table>
