--- a/cleaned/34.html
+++ b/cleaned/34.html
@@ -80,35 +80,24 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <img src="resources/_wsb_125x97_KInderbasteln_red.jpg">
-                </td>
-                <td valign="top">
-                  <img src="resources/_wsb_137x97_Markes+Bilder+110.jpg">
-                </td>
-                <td valign="top">
-                  <img src="resources/_wsb_132x97_T$C3$B6pfern+web+15-red.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <b>K I N D E R G E B U R T S T A G E</b>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Zwei Stunden bieten unsere Künstler, erfahren in der Zusammenarbeit mit Kindern, für Gruppen bis zu zwölf Kindern ihre Themen an: <a href="http://www.juneejah.de">Wiebke Heinrich:</a> Tanzen Teresa Werdier: Töpfern Teresa Werdier: Basteln <a href="http://www.wfb-foto.de">Wolfgang F. Brack:</a> Foto-Shooting Ellie S. Beyer: Figuren-Filzen Der Grundpreis beträgt 120 € exkl. Materialien
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <h1>Kindergeburtstage</h1>
+            <img src="resources/_wsb_125x97_KInderbasteln_red.jpg">
+            <img src="resources/_wsb_137x97_Markes+Bilder+110.jpg">
+            <img src="resources/_wsb_132x97_T$C3$B6pfern+web+15-red.jpg">
+            <p>Zwei Stunden bieten unsere Künstler, erfahren in der Zusammenarbeit mit Kindern, für Gruppen bis zu zwölf Kindern ihre Themen an</p>
+
+          <dl>
+          <dt><a href="http://www.juneejah.de">Wiebke Heinrich</a></dt>
+            <dd>Tanzen</dd>
+          <dt>Teresa Werdier</dt>
+            <dd>Töpfern</dd>
+            <dd>Basteln</dd>
+          <dt><a href="http://www.wfb-foto.de">Wolfgang F. Brack</a></dt>
+            <dd>Foto-Shooting</dd>
+          <dt>Ellie S. Beyer</dt>
+            <dd>Figuren-Filzen</dd>
+          </dl>
+          <p>Der Grundpreis beträgt 120 € exkl. Materialien</p>
         </td>
       </tr>
     </table>
