--- a/cleaned/37.html
+++ b/cleaned/37.html
@@ -91,6 +91,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Kinderkurse auf einen Blick</h1>
           <img src="resources/_wsb_500x670_Kinderangebotepdf.pdf16.jpg">
         </td>
       </tr>
