--- a/cleaned/38.html
+++ b/cleaned/38.html
@@ -181,9 +181,12 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Tanztheater-Aktion "Games" für Kinder</h1>
+          <h2>am 14. Juni 2015</h2>
           <p>
             <img src="resources/_wsb_509x741_Plakat_web.jpg">
-          </p><img src="resources/Kindertheater_Flyer_Mario_final.jpg">
+          </p>
+          <p><img src="resources/Kindertheater_Flyer_Mario_final.jpg"></p>
         </td>
       </tr>
     </table>
