--- a/cleaned/29.html
+++ b/cleaned/29.html
@@ -181,46 +181,53 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p align="left"></p>
-          <p align="center">
-            <b>"Historisches Sommerfest"</b>
-          </p><b>am Sonnabend, den 25. Juni 2016, 11 bis 22 Uhr</b>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_499x708_Seite1aus+werbeflyer-preview3.jpg"> <img src="resources/_wsb_503x708_Seite2+aus+werbeflyer-preview3.jpg">
-                  <p>
-                    Neugraben ist seit 500 Jahren nachweislich besiedelt.
-                  </p>
-                  <p>
-                    Dieses Jubiläum wird am <b>Sonnabend, den 25.6.2016, von 11 bis 22 Uhr</b> auf der großen Wiese vor dem Bildungs- und Gemeinschaftszentrum Süderelbe (BGZ) zünftig gefeiert. Der Park ist gut zu erreichen; er liegt direkt am S-Bahnhof Neugraben und einem P+R Parkhaus.
-                  </p>Was mit Gödeke Tiedemann 1516 seinen Anfang nahm, hat sich bis heute zu einem wachsenden Stadtteil der Hansestadt Hamburg entwickelt. Bürger aus unterschiedlichen Bevölkerungsgruppen haben hier neben den Familien aus dem bäuerlichen Kern des alten Dorfes ein Zuhause gefunden.
-                  <p>
-                    Mit dem Festtag wird die Entwicklung der Region auf spannende Weise für alle Besucher erlebbar gemacht. Neben unterhaltsamen Präsentationen im Bühnenprogramm werden die besonders eingängigen historischen Ereignisse der Region in kleinen Darstellungsbereichen vorgestellt. Ob bäuerliches Leben, ein Blick ins Klassenzimmer der Jahrhundertwende, die Wirtschaftswunderzeit mit Eventgastronomie, Kutschfahrten oder der Kinder- und Familien-Spaßbereich: Es gibt Spannendes zu erleben! Inszenierungen, ansprechende Dekorationen, historische Informationen und „Geschichte zum Anfassen“ laden zum Mitmachen und Weiterbilden ein. „Mittendrin statt nur dabei!“ ist hier ganz klar das Motto.
-                  </p>
-                  <p>
-                    Gemeinsam mit vielen Institutionen, Vereinen, Schulen und Neugrabener Bürgern wird es Theater und Tanz, Musik und Kulinarisches, Artistik und Bands geben. Organisiert und ausgerichtet wird das Fest durch das Kulturhaus Süderelbe in Kooperation mit der steg Hamburg, SAGA GWG, der HNT (Hausbruch-Neugrabener-Turnerschaft) und den Firmen Freyhand und Bobeck-Medien.
-                  </p>
-                  <p>
-                    Mit finanzieller Unterstützung vom Bezirksamt Harburg, SAGA GWG „Stiftung Nachbarschaft“, Heimspiel Neuwiedenthal (Joachim-Hertz-Stiftung), den Verfügungsfonds Neugraben und Neuwiedenthal und der Kurt Denker-Stiftung, können Akteure wie die Loki Schmidt-Stiftung und lokale Größen wie der Ring für Heimattanz, der Pfadfinderstamm „Ulrich von Hutten“, das Süderelbe-Archiv, ProQuartier, die Freunde der Tempofahrzeuge und der Verein Plattdüütsch leevt – nur ein paar Beispiele aus der Reihe der Teilnehmenden – mit allen Besuchern in den Festtag starten. Viel Buntes und jede Menge Spaß sind garantiert!
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>
-            <b>Kommen Sie und feiern Sie mit!</b>
-          </p>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <b>Vorläufiges Festprogramm</b> 11.00 Uhr Öffnung des Veranstaltungsgeländes 11.30 Uhr Ansprache durch Herrn Völsch (Bezirksamtsleiter Harburg) und Veranstalter 11.45 Uhr Öffnung der Erlebnis- und Informationsbereiche 13.00 Uhr Traditionelle Blasmusik vom Musikzug Fischbek 14.30 Uhr Theateraufführung des Gymnasiums Süderelbe 16.00 Uhr Chorgesang des MGV Sängerlust Scheideholz von 1919 mit dem Damenchor Hamburg-Neugraben von 1951 18.00 Uhr Band „Trio Kosmopolka" 20.00 Uhr Hauptband „Frölich Geschray" mit Mittelalterfolk 21.30 Uhr Feuershow mit Jonglage und Akrobatik Bis 23.00 Uhr Ausklang der Veranstaltung in der Gastronomie „Willkommen im Wirtschaftswunder" im Stil der 50er und 60er Jahre
-                </td>
-              </tr>
-            </tbody>
-          </table><img src="resources/_wsb_487x425_Wegbeschreibung.jpg">
+          <h1>Historisches Sommerfest</h2>
+          </h2>am Sonnabend, den 25. Juni 2016, 11 bis 22 Uhr</h2>
+        <img src="resources/_wsb_499x708_Seite1aus+werbeflyer-preview3.jpg">
+        <img src="resources/_wsb_503x708_Seite2+aus+werbeflyer-preview3.jpg">
+        <p>
+          Neugraben ist seit 500 Jahren nachweislich besiedelt.
+        </p>
+        <p>
+          Dieses Jubiläum wird am <b>Sonnabend, den 25.6.2016, von 11 bis 22 Uhr</b> auf der großen Wiese vor dem Bildungs- und Gemeinschaftszentrum Süderelbe (BGZ) zünftig gefeiert. Der Park ist gut zu erreichen; er liegt direkt am S-Bahnhof Neugraben und einem P+R Parkhaus.
+        </p>
+        <p>Was mit Gödeke Tiedemann 1516 seinen Anfang nahm, hat sich bis heute zu einem wachsenden Stadtteil der Hansestadt Hamburg entwickelt. Bürger aus unterschiedlichen Bevölkerungsgruppen haben hier neben den Familien aus dem bäuerlichen Kern des alten Dorfes ein Zuhause gefunden.</p>
+        <p>
+          Mit dem Festtag wird die Entwicklung der Region auf spannende Weise für alle Besucher erlebbar gemacht. Neben unterhaltsamen Präsentationen im Bühnenprogramm werden die besonders eingängigen historischen Ereignisse der Region in kleinen Darstellungsbereichen vorgestellt. Ob bäuerliches Leben, ein Blick ins Klassenzimmer der Jahrhundertwende, die Wirtschaftswunderzeit mit Eventgastronomie, Kutschfahrten oder der Kinder- und Familien-Spaßbereich: Es gibt Spannendes zu erleben! Inszenierungen, ansprechende Dekorationen, historische Informationen und „Geschichte zum Anfassen“ laden zum Mitmachen und Weiterbilden ein. „Mittendrin statt nur dabei!“ ist hier ganz klar das Motto.
+        </p>
+        <p>
+          Gemeinsam mit vielen Institutionen, Vereinen, Schulen und Neugrabener Bürgern wird es Theater und Tanz, Musik und Kulinarisches, Artistik und Bands geben. Organisiert und ausgerichtet wird das Fest durch das Kulturhaus Süderelbe in Kooperation mit der steg Hamburg, SAGA GWG, der HNT (Hausbruch-Neugrabener-Turnerschaft) und den Firmen Freyhand und Bobeck-Medien.
+        </p>
+        <p>
+          Mit finanzieller Unterstützung vom Bezirksamt Harburg, SAGA GWG „Stiftung Nachbarschaft“, Heimspiel Neuwiedenthal (Joachim-Hertz-Stiftung), den Verfügungsfonds Neugraben und Neuwiedenthal und der Kurt Denker-Stiftung, können Akteure wie die Loki Schmidt-Stiftung und lokale Größen wie der Ring für Heimattanz, der Pfadfinderstamm „Ulrich von Hutten“, das Süderelbe-Archiv, ProQuartier, die Freunde der Tempofahrzeuge und der Verein Plattdüütsch leevt – nur ein paar Beispiele aus der Reihe der Teilnehmenden – mit allen Besuchern in den Festtag starten. Viel Buntes und jede Menge Spaß sind garantiert!
+        </p>
+          <p><b>Kommen Sie und feiern Sie mit!</b></p>
+
+          <h2>Vorläufiges Festprogramm</h2>
+          <dl>
+          <dt>11.00 Uhr</dt>
+            <dd>Öffnung des Veranstaltungsgeländes</dd>
+          <dt>11.30 Uhr</dt>
+            <dd>Ansprache durch Herrn Völsch (Bezirksamtsleiter Harburg) und Veranstalter</dd>
+          <dt>11.45 Uhr</dt>
+            <dd>Öffnung der Erlebnis- und Informationsbereiche</dd>
+          <dt>13.00 Uhr</dt>
+            <dd>Traditionelle Blasmusik vom Musikzug Fischbek</dd>
+          <dt>14.30 Uhr</dt>
+            <dd>Theateraufführung des Gymnasiums Süderelbe</dd>
+          <dt>16.00 Uhr<dt>
+            <dd>Chorgesang des MGV Sängerlust Scheideholz von 1919 mit dem Damenchor Hamburg-Neugraben von 1951</dd>
+          <dt>18.00 Uhr</dt>
+            <dd>Band „Trio Kosmopolka"</dd>
+          <dt>20.00 Uhr</dt>
+            <dd>Hauptband „Frölich Geschray" mit Mittelalterfolk</dd>
+          <dt>21.30 Uhr</dt>
+            <dd>Feuershow mit Jonglage und Akrobatik</dd>
+          <dt>Bis 23.00 Uhr</dt>
+            <dd>Ausklang der Veranstaltung in der Gastronomie „Willkommen im Wirtschaftswunder" im Stil der 50er und 60er Jahre</dd>
+          </dt>
+
+          <img src="resources/_wsb_487x425_Wegbeschreibung.jpg">
         </td>
       </tr>
     </table>
