--- a/cleaned/35.html
+++ b/cleaned/35.html
@@ -91,33 +91,24 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr>
-                <td valign="top">
-                  KURSANMELDUNG
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Wir freuen uns über Ihren Anruf, Tel.: 796 72 22 oder Kontakt per Mail an: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a> <a href="resources/Kursanm_14.pdf" target="_blank">Das Anmeldeformular finden Sie hier zum Downdoad:</a>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  TEILNAHMEBEDINGUNGEN
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  1. Die Dauer der Kurse richtet sich nach den vereinbarten Zeiten. 2. Soweit der/die Kursteilnehmer/in die Teilnahme versäumt, hat er/sie keinen Anspruch auf Gebührenminderung oder Erstattung der Kursgebühr. 3. Der durch etwaige Verhinderung der Kursleitung ausgefallene Unterricht wird nach Vereinbarung nachgeholt bzw. vergütet. Ein Aspruch des/der Kursteilnehmers/in auf Kursleitung durch jeweils die gleiche Lehrkraft besteht nicht. 4. Die Zahlung der Kursgebühr wird mit der Anmeldung im Voraus fällig. Rücktritt bis 14 Tage vor Kursbeginn ist kostenfrei, danach werden 50% der Kursgebühr in Rechnung gestellt bzw. einbehalten. Abrechnung der Kursgebühr für die Kinderangebote über das "Hamburger Bildungspaket" ist möglich. Ermäßigung der Kursgebür für Hartz-V-Empfänger/in ist möglich. Einzelheiten bitte im Büro des Kulturhauses erfragen. 5. Bei zu niedriger Teilnehmerzahl der einzelnen Kurse müssen, nach Absprache, die Kursdauer gekürzt oder die Kursgebühren erhöht werden. Änderungen im Kursprogramm vorbehalten.
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <h1>Kursanmeldung</h1>
+
+        <p>Wir freuen uns über Ihren Anruf, Tel.: 796 72 22<br>
+        oder Kontakt per Mail an: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a></p>
+
+        <p><a href="resources/Kursanm_14.pdf" target="_blank">Das Anmeldeformular finden Sie hier zum Download</a></p>
+
+        <h1>Teilnahmebedingungen</h1>
+
+        <ol>
+        <li>Die Dauer der Kurse richtet sich nach den vereinbarten Zeiten.</li>
+        <li>Soweit der/die Kursteilnehmer/in die Teilnahme versäumt, hat er/sie keinen Anspruch auf Gebührenminderung oder Erstattung der Kursgebühr.</li>
+        <li>Der durch etwaige Verhinderung der Kursleitung ausgefallene Unterricht wird nach Vereinbarung nachgeholt bzw. vergütet. Ein Aspruch des/der Kursteilnehmers/in auf Kursleitung durch jeweils die gleiche Lehrkraft besteht nicht.</li>
+        <li>Die Zahlung der Kursgebühr wird mit der Anmeldung im Voraus fällig. Rücktritt bis 14 Tage vor Kursbeginn ist kostenfrei, danach werden 50% der Kursgebühr in Rechnung gestellt bzw. einbehalten. Abrechnung der Kursgebühr für die Kinderangebote über das "Hamburger Bildungspaket" ist möglich. Ermäßigung der Kursgebür für Hartz-V-Empfänger/in ist möglich. Einzelheiten bitte im Büro des Kulturhauses erfragen.</li>
+        <li>Bei zu niedriger Teilnehmerzahl der einzelnen Kurse müssen, nach Absprache, die Kursdauer gekürzt oder die Kursgebühren erhöht werden.</li>
+        </ol>
+
+        <p>Änderungen im Kursprogramm vorbehalten.</p>
         </td>
       </tr>
     </table>
