--- a/cleaned/36.html
+++ b/cleaned/36.html
@@ -181,67 +181,53 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <b>FÜR GRUPPEN AUSVERKAUFT!</b> Eintritt für einzelne Besucher noch möglich <img src="resources/_wsb_514x725_K$C3$B6nigin.jpg">
+          <h1>Theater Mär: "Die Königin der Farben"</h1>
+          <h2>Am Donnerstag, 17. März 16 um 11.00 Uhr</h2>
+
+          <p><b>FÜR GRUPPEN AUSVERKAUFT!</b><br>
+          Eintritt für einzelne Besucher noch möglich</p>
+
+          <img src="resources/_wsb_514x725_K$C3$B6nigin.jpg">
           <h3>
             Erzähltheater für Klein und Gross ab 4 Jahren
           </h3>
           <p>
             Traum und Wirklichkeit verschmelzen in dieser warmherzigen Geschichte um eine Königin, die das sanfte Blau, das wilde Rot und das warme aber auch manchmal zickige Geld beherrscht. Bis alles durcheinander gerät...
           </p>
+
           <p>
-            <b>Am Donnerstag, 17. März 16</b>
+            <b>Kulturhaus Süderelbe e.V.</b><br>
+            Schulaula BGZ Süderelbe<br>
+            Am Johannisland 4<br>
+            21147 Hamburg<br>
+            (Direkt an der S-Bahn Neugraben)<br>
           </p>
           <p>
-            <b>um 11.00 Uhr</b>
-          </p>
-          <p>
-            <b>Kulturhaus Süderelbe e.V.</b>
-          </p>
-          <p>
-            Schulaula BGZ Süderelbe
-          </p>
-          <p>
-            Am Johannisland 4
-          </p>
-          <p>
-            21147 Hamburg
-          </p>
-          <p>
-            (Direkt an der S-Bahn Neugraben)
-          </p>
-          <p>
-            <b>Eintritt:</b> € 4,50 an der Tageskasse
-          </p>
-          <p>
-            <b>! Für Gruppen ausverkauft !</b>
-          </p>
-          <p>
+            <b>Eintritt:</b> 4,50 € an der Tageskasse<br>
+            <b>Für Gruppen ausverkauft!</b><br>
             <b>Dauer:</b> 45 Min.
           </p>
-          <p>
-            Königin: Marcella Ruscingo / Frauke Ruberth
-          </p>
-          <p>
-            Erzähler: Peter Markhoff / Thomas Nestler
-          </p>
-          <p>
-            Regie: Marc Lowitz
-          </p>
-          <p>
-            Stückfassung: Marc Lowitz, Peter Marchoff
-          </p>
-          <p>
-            Musik: Thomas Pohle
-          </p>
-          <p>
-            Illustrarorin: Jutta Bauer
-          </p>
-          <p>
-            Verlag: Beltz & Gelberg
-          </p>
-          <p>
-            Fotos: Oliver Fantitsch
-          </p>
+          <dl>
+          <dt>Königin</dt>
+            <dd>Marcella Ruscingo</dd>
+            <dd>Frauke Ruberth</dd>
+          <dt>Erzähler</dt>
+            <dd>Peter Markhoff</dd>
+            <dd>Thomas Nestler</dd>
+          <dt>Regie</dt>
+            <dd>Marc Lowitz</dd>
+          <dt>Stückfassung</dt>
+            <dd>Marc Lowitz</dd>
+            <dd>Peter Marchoff</dd>
+          <dt>Musik</dt>
+            <dd>Thomas Pohle</dd>
+          <dt>Illustrarorin</dt>
+            <dd>Jutta Bauer</dd>
+          <dt>Verlag</dt>
+            <dd>Beltz & Gelberg</dd>
+          <dt>Fotos</dt>
+            <dd>Oliver Fantitsch</dd>
+          </dl>
         </td>
       </tr>
     </table>
